Bug 472876 - No wallpaper plugins display content on the Breeze Lock screen; you just see a black background
Summary: No wallpaper plugins display content on the Breeze Lock screen; you just see ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Theme - Breeze (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 472926 (view as bug list)
Depends on:
Blocks: 470599
  Show dependency treegraph
 
Reported: 2023-08-01 12:53 UTC by Patrick Silva
Modified: 2023-08-23 14:56 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-08-01 12:53:33 UTC
STEPS TO REPRODUCE
1. open Screen Locking KCM
2. click on "Configure..." button
3. set the Wallpaper type to "Slideshow" mode and choose a folder containing images
4. set "Change every" to 5 seconds for test purposes
5. apply the changes
6. lock your screen

OBSERVED RESULT
the background is a solid black color and it never changes

EXPECTED RESULT
slideshow background works

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-08-01 19:48:55 UTC
Can reproduce.
Comment 2 Nate Graham 2023-08-02 17:25:38 UTC
Seems to affect all wallpaper plugins, in fact. I believe it's a problem with the shader.
Comment 3 Nate Graham 2023-08-02 17:26:06 UTC
*** Bug 472926 has been marked as a duplicate of this bug. ***
Comment 4 David Redondo 2023-08-23 14:56:30 UTC
Git commit 1cadab0acbbc09c98ff9b3e1ea534105e68c7799 by David Redondo.
Committed on 23/08/2023 at 16:53.
Pushed by davidre into branch 'master'.

greeter: Make wallpapers work in Plasma 6

In Plasma 6 wallpapers instantiate WallpaperItem as root item
themselves. So we need to let our wrapper gain the full API, make
it an item and register it to be instantiated. Because pluginName
and configuration are CONSTANT upstream we need to make sure they
are already correct when the item is complete.
Related: bug 470601

M  +28   -14   greeter/greeterapp.cpp
M  +1    -1    greeter/greeterapp.h
M  +1    -0    settings/CMakeLists.txt
M  +1    -1    settings/appearancesettings.cpp
M  +2    -2    settings/wallpaper_integration.cpp
M  +16   -3    settings/wallpaper_integration.h

https://invent.kde.org/plasma/kscreenlocker/-/commit/1cadab0acbbc09c98ff9b3e1ea534105e68c7799